# CairoRustBugReproduce

./: .gitignore
c/: CMakeLists.txt
c/src/: main.c
rust/: Cargo.toml
rust/src/: main.rs
